# lumina

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-installers.yml  ci.yml  release.yml
artifacts/research/: lumina-architecture-brief.md  lumina-gui-ux-research.md
backend/: lumina-backend.spec  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py  session.py
backend/tests/: conftest.py  test_bayesian.py  test_bayesian_regression.py  test_build_spec.py  test_data_routes.py  test_distribution.py  test_downsampling.py  test_eda_routes.py  test_export.py  test_filters.py  test_inference.py  test_model_routes.py  test_nfr.py  test_phase7_routes.py  test_plugins.py  test_profiling.py  test_project_routes.py  test_samples.py  test_stepwise.py  test_transforms.py  test_views.py
docs/: BUILDING.md  CONTRIBUTING.md  architecture.md
e2e/: lumina-showcase.mjs  lumina-smoke.mjs
scripts/: build-backend.ps1  build-backend.sh  build-tauri.ps1  build-tauri.sh  dev.ps1  gen-icons.py  nfr-validate.ps1  run-tauri-dev.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  data.ts  eda.ts  export.ts  filters.ts  inference.ts  model.ts  plugins.ts  profiling.ts  project.ts  samples.ts  transforms.ts  views.ts
src/constants/: palette.ts
src/hooks/: useChartClipboard.ts  (+1 more)
(+131 files in other folders)
