[package]
name = "lumina"
version = "0.0.0"
description = "Data Visualization & Modeling Platform"
authors = ["Lumina Contributors"]
edition = "2021"

[lib]
name = "lumina_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["net"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]